--- a/style.css
+++ b/style.css
@@ -39,12 +39,14 @@ body {
     display:inline-flex;
     flex-grow: 3;
     flex-direction: column;
+    justify-content: space-around;
   }
   
   .row {
     min-height: 200px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
   }
   
   .square {
