--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
   }
   
   .square {
@@ -54,6 +55,7 @@ body {
     height: 125px;
     padding: 10px;
     display: flex;
+    align-items: center;
   }
   
   .day.square {
